@@ -1,0 +1,35 @@
+-----BEGIN PGP PRIVATE KEY BLOCK-----
+
+lQIGBFiyGq8BBADEpl4ikmoxCF0YAYqDyfavyB09+NC9Er7qiIU4qLJnHFRS5xay
+VLvYG8KnwjIUxpfeFHXU2wNDHx20u9Yy62yoHEgDfhlTUbE3Hw4itER3BAzeQQja
+JucbNRP92b3i59670fZ/txloy8Dv01KDy0cXQb8M8yCc9jAooL6FK8Q5RwARAQAB
+/gcDAomw/GW3n4CTYKP0OWN0M8AwxYp5CJKoVB5Z0EoLhGxHjuH4UuWD/2X6rib3
+xY3/Ma1/DYYfo4qLvyYUXhlB2fgWot3Wbpx7DaaxCFd6TYUgepQEXskb/svfjxif
+7QSKqzZYrD4hWC8oVAECYHTMmm8EsyQXOQyh2sSgzm0MHfjsyKRHIT88yJJE1y5b
+D0fVuwO78oQ6wQU32WaUnD0Inur+kLNUYcLhWfmc9dgZe7GFlIEAQsPDnfgT6o+x
+wjjv5iKHDk+IyREwcPoRfoEieKsR3e5rUY78sEOTvtAgIH4dUI+bbetneWWjmSUf
+esLxWDh5qF/EDjvKse9ouon3bP/q4PdLDC/xplmBHEBqE2K4HMeD4luoKcqD4Q0r
+8AONXeJTFUdNXk2lOTb6L4p4QkY/4gBGYjO86PJENaaJeIyH3bapsOe/8ai5KngX
+sdgLVGux4EpKw4ANTeEoG4UmsEOT/yku8BPgZHcOa4PhsCF82ZPctaO0P0V4cGly
+ZWQgdGVzdCBrZXkgKEV4cGlyZWQgc2lndWwgdGVzdCBrZXkpIDxleHBpcmVkQGV4
+YW1wbGUuY29tPoi+BBMBAgAoBQJYshqvAhsDBQkAAVGABgsJCAcDAgYVCAIJCgsE
+FgIDAQIeAQIXgAAKCRA2/xi/l83zf5oIA/4+jfOKmtfHCXMHsl7dpa+Mp1U+wgb6
+yk6CKEM/K3561V5HKM0ZghPX5cDRbvVMouJB9k63FYA/SwoVj3gbGQPXNy5v6AwV
+K6FZasWezcmi06nKE8JqMuKnGgzK4GlFQkfGbjz70nTmbXTdXPxp805c8ZxPdjcd
+y70R7Bif7mm3gp0CBgRYshqvAQQAqqxzdIJk4sfwecVGa9YXxDFoLeYFLOOEr5R1
+8Pms2MrayyQGUNvfT1kn0DoK8aCEYxOvl680NIAVvdPeJNGvvhyQtx0zUFFbs9iQ
+CM3406BPJ+Di+5n/JcAJ4GaD9FGAfZGyWL1o795lepCSDC4aEzfjyUuvuy6+NCAC
+rxtM2b8AEQEAAf4HAwKJsPxlt5+Ak2DNxDttih8U8enEFujbfAO4i8MC+PYc+EqJ
+LUAu0wBBQjESXYx/SO8KvZivABfQMnmHgPYStppwtOhRxsp1MuCkwe9Z2VplOKez
+n9kpmsXv6qYcwINshzxNlZ26qgNtwYepL+L1LZ/Rg+TZrPKhfKgCyzzDtH/H3Eet
+8Cju9gaSbH9uoDxUutj4Y++T/tYhgVthccjdb4z4MkPD3RnSttDJGU3E5AL5pI4Q
+WD23zyBFV9j8VhfQuKfcajeA4u3Qjv1lPoW61DGA5ofKQTfwTaYL22U7b5VcdeBB
+ZrMRRSJVMyQp3IjsFYPLOSs3y+BLPb/JdLS9W3NKpDVoe+Bi6LcZQ6IippZbvCXG
+f87m4MP1/egTFLUO3VRFAIXl9RPYExhmvW14PcZjQfl3IIyzGf2M5vk6JXZ5wn1Y
+5Fz4SAMChEFkIAODXpOfsi7OOA4oOHLdNNpH3cZaay+sMoFA5xbpalthgaojvnxE
+etLZiKUEGAECAA8FAliyGq8CGwwFCQABUYAACgkQNv8Yv5fN838g3wP/YsXTSK1Z
+gESKsUpLxZ8YeKATytzny0/nrcYiF+I+I0cEtbaszUbfzlQ7r7vIQqjlET1kUcTR
+xYGKPWiwA/mvWCEMxzGQcmFkCfhYP/WMYokdd5vVFZdAXyhdAdjMYZjiCz1RX+Q5
+KXtPRtPH+SAvHM9hmFgw13kd/XkdA30chQQ=
+=Ti2I
+-----END PGP PRIVATE KEY BLOCK-----
